# Filminfo

./: LICENSE  README.md  pyproject.toml
src/filminfo/: __main__.py
src/filminfo/app/: __init__.py  app.py  combobox.py  comment.py  exposure.py  form_add.py  form_remove.py  gallery.py  metadata_add.py  metadata_export_import.py  metadata_remove.py  metadata_view.py  notebook.py  origin.py  other_tags.py  scrollable_frame.py  thumbnail.py  treeview.py  types.py  validating_entry.py
src/filminfo/app/database_widgets/: __init__.py  camera.py  film.py  lens.py
src/filminfo/assets/: icon.icns
src/filminfo/configuration/: __init__.py
src/filminfo/controllers/: database_controller.py  exiftool_controller.py
src/filminfo/models/: convertes.py  database.py  entities.py  exiftool.py  validators.py
