[project]
name = "filminfo"
version = "0.1.1"
description = "Exiftool frontend to add basic information to film scans."
authors = [
    { name = "Michal Caban", email = "" }
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pillow>=11.3.0",
    "platformdirs>=4.4.0",
]

[project.gui-scripts]
filminfo = "filminfo.__main__:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff.lint.isort]
lines-after-imports = 2
