[project]
name = "filminfo"
version = "0.2.2"
description = "Exiftool frontend to add basic information to film scans."
authors = [
    { name = "Michal Caban", email = "nomail@cabanmichal.xyz" }
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pillow>=11.3.0",
    "platformdirs>=4.4.0",
]

[project.gui-scripts]
filminfo = "filminfo.__main__:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
filminfo = ["assets/*.png"]

[tool.ruff.lint.isort]
lines-after-imports = 2
